fix align

--- a/css/signin.css
+++ b/css/signin.css
@@ -44,5 +44,5 @@ body {
 }
 
 #forget{
-    text-align: center;
+   margin-left: 45px;
 }
